add chronicle publisher